Adjust max-width to 100% - stops some playlists from getting too big horizontally

--- a/frontend/src/styles/Playlist.module.css
+++ b/frontend/src/styles/Playlist.module.css
@@ -3,7 +3,7 @@
   background-color: #5a5550;
   border: 1px solid #5a5550;
   border-radius: 0.25rem;
-  max-width: 33vw;
+  max-width: 100%;
   max-height: 20vh;
 }
 
